[tool.poetry]
name = "varac-home-assistant"
version = "0.1.0"
description = "Custom home-assistant docker image with python libs: midea-inventor-lib, music-assistant"
authors = ["Varac <varac@varac.net>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
# https://pypi.org/project/midea-inventor-lib/
midea_inventor_lib = "1.0.4"
# https://github.com/music-assistant/core
music-assistant = "^1.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
